# llmpipe

./: .gitignore  EXAMPLES.md  EXAMPLES2.md  README.md  USAGE.md  VIGNETTE-DATA-SCIENCE-AGENT.md  VIGNETTE-LLMPIPE.md  VIGNETTE.md  pyproject.toml
artifacts/generate_univariate_summary/: task.md
docs/llmpipe/: chunk_text.md  evaluationscore.md  field.md  index.md  llmchat.md  llmprompt.md  llmprompt_formany.md  template.md  xml.md
docs/llmpipe/evaluations/: contains_all.md  contains_one.md  core.md  (+13 more)
experiments/: scratch.py
experiments/old_modules/: address_comments.py  convert_list_to_json.py  exemplar_generator.py  prompt.py  yaml_prompt.py
experiments/tutorials/: diataxis_tutorials_guidelines.txt  guidelines_chunked.jsonl  outline_rubrik.json  scratch  scratch.py
resources/: dummy_data.jsonl
src/llmpipe/: __init__.py  chunk_text.py  constants.py  data.py  field.py  llmchat.py  llmprompt.py  llmprompt_formany.py  prompt_module.py  prompt_module2.py  revisor_module.py  template.py  xml.py
tests/: test_chunk_text.py  test_contains_all.py  test_evaluations_contains_one.py  test_evaluations_contains_xml.py  test_evaluations_is_in.py  test_evaluations_is_in_allow_list.py  test_evaluations_max_chars.py  test_evaluations_max_words.py  test_evaluations_no_blocked_terms.py  test_evaluations_no_long_words.py  test_evaluations_no_slashes.py  test_evaluations_no_square_brackets.py  test_evaluations_not_in_blocked_list.py  test_field.py  test_is_in_string.py  test_llmchat.py  test_llmprompt.py  test_prompt_module.py  test_template.py  test_xml.py  test_xml_utils.py
(+51 files in other folders)
