[project]
name = "llmpipe"
version = "0.1.0"
description = "A toolkit for building LLM pipelines"
authors = [
    {name = "John Dunavent", email = "dunavent.jm@gmail.com"},
]
dependencies = [
    "litellm>=1.58.2",
    "typer>=0.15.1",
    "numpydoc>=1.8",
    "datasets",
    "aider-chat>=0.72.3",
    "polars>=1.21.0",
    "GitPython>=3.1.44",
    "torch>=2.2.2",
    "transformers"
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ipython",
    "nb-clean>=3.3.0",
    "pytest-cov>=2.0",
    "pdoc3>=0.11",
    "jupyter>=1.1.1",
    "boto3>=1.35"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
